# calledit

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
src/calledit/: __init__.py  main.py
src/calledit/api/: boards.py  predictions.py
src/calledit/core/: config.py  db.py
src/calledit/schemas/: board.py
src/calledit/services/: board_service.py  prediction_service.py  scoring.py
tests/: conftest.py  test_scoring.py
