[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calledit"
version = "0.1.0"
description = "CalledIt — a shared prediction board with a Brier-calibration leaderboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "aiosqlite",
    "loguru",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calledit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
